HYDRADEV 94: make font size smaller to fix alignment of Image Geographic Information label and arrow; add line-height for responsive wrapping of label

--- a/app/assets/stylesheets/cornell/_facets.css.scss
+++ b/app/assets/stylesheets/cornell/_facets.css.scss
@@ -34,6 +34,13 @@
 	.panel-body {
 		border-top:none;
 	}
+	.panel-title {
+		font-size: 14px;
+		line-height: 1.4em;
+	}
+	.panel-heading.collapse-toggle .panel-title:after {
+		line-height: inherit;
+	}
 }
 
 
